--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -115,6 +115,14 @@ img {
 // Video Embed
 //----------------------------
 
-iframe.embedVideoIframe {
-
+.page-content > div div.background:first-child {
+  .gatsby-resp-iframe-wrapper {
+    // removes the default paddinng around a video if its in the first grid container on a page
+    @include breakpoint('lg') {
+      margin-bottom: -100px;
+      margin-right: -60px;
+      margin-top: -58px;
+    }
+  }
 }
+
